# Data-Analysis-MAS

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/: customers.csv  products.csv  sales_data.csv
docker/: clickhouse-users.xml  docker-compose.yml  init.sql
scripts/: cli.py  demo.py
src/: __init__.py
src/agents/: __init__.py  graph.py  state.py
src/agents/nodes/: __init__.py  analyst.py  cleaner.py  visualizer.py
src/db/: __init__.py  duckdb_manager.py  schemas.py
src/evaluation/: __init__.py  benchmarks.py  evaluator.py  langfuse_client.py  metrics.py
src/mcp/: __init__.py  client.py  server.py  tools.py
src/memory/: __init__.py  embeddings.py  mem0_layer.py  semantic.py  vector_store.py
src/utils/: config.py  llm_factory.py  logging.py  mlx_llm.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py  test_memory_integration.py
tests/unit/: test_agents.py  test_duckdb.py  test_evaluation.py  test_mcp.py  test_memory.py
ui/: app.py
ui/.streamlit/: config.toml
ui/components/: charts.py  profiler.py  sidebar.py
ui/pages/: 1_🔍_Query.py  2_📊_Explorer.py  3_📈_Dashboard.py  4_🧠_Memory.py  5_⚙️_Settings.py  6_📁_Datasets.py
ui/services/: agent_service.py
ui/utils/: session.py
